[gd_scene load_steps=4 format=2]

[ext_resource path="res://tools/map_tester/map_tester.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.760784, 1, 1 )

[node name="map_tester" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background_color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map" type="Node2D" parent="."]
position = Vector2( 257, 49 )

[node name="cell_highlighter" type="Panel" parent="."]
visible = false
margin_right = 32.0
margin_bottom = 32.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = 240.0
margin_bottom = -40.0
rect_min_size = Vector2( 200, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 193.0
margin_bottom = 513.0

[node name="game_type_list" type="OptionButton" parent="PanelContainer/VBoxContainer"]
margin_right = 186.0
margin_bottom = 20.0
focus_mode = 0

[node name="level_list" type="ItemList" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 186.0
margin_bottom = 33.0
focus_mode = 0
size_flags_vertical = 2
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 186.0
margin_bottom = 506.0

[node name="cell_pos" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_right = 186.0
margin_bottom = 14.0
text = "pos"

[node name="cell_type" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 18.0
margin_right = 186.0
margin_bottom = 32.0
text = "type"

[node name="cell_height" type="Label" parent="PanelContainer/VBoxContainer/info"]
margin_top = 36.0
margin_right = 186.0
margin_bottom = 50.0
text = "type"

[node name="textures" type="HBoxContainer" parent="PanelContainer/VBoxContainer/info"]
margin_top = 54.0
margin_right = 186.0
margin_bottom = 136.0

[node name="floor" type="VBoxContainer" parent="PanelContainer/VBoxContainer/info/textures"]
margin_left = 13.0
margin_right = 77.0
margin_bottom = 82.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/info/textures/floor"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="floor_label" type="Label" parent="PanelContainer/VBoxContainer/info/textures/floor"]
margin_left = 10.0
margin_top = 68.0
margin_right = 54.0
margin_bottom = 82.0
size_flags_horizontal = 4
text = "FLOOR"

[node name="wall" type="VBoxContainer" parent="PanelContainer/VBoxContainer/info/textures"]
margin_left = 108.0
margin_right = 172.0
margin_bottom = 82.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/info/textures/wall"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )

[node name="wall_label" type="Label" parent="PanelContainer/VBoxContainer/info/textures/wall"]
margin_left = 14.0
margin_top = 68.0
margin_right = 50.0
margin_bottom = 82.0
size_flags_horizontal = 4
text = "WALL"
